--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url('./images/10.png');
-  background-size: cover;
+}
+
+#root {
+  background: url('./images/10.png') no-repeat right center;
+  background-size: 50vw;
 }
